--- a/bootstrap-5.3.8-dist/index.html
+++ b/bootstrap-5.3.8-dist/index.html
@@ -14,7 +14,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#sobre">Sobre Mim</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
@@ -47,35 +47,35 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="img/carrosel1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
+              <h5>Primeiro slide representativo</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/carrosel2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
+              <h5>Segundo slide representativo</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/carrosel3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
+              <h5>Terceiro slide representativo</h5>
               <p>Some representative placeholder content for the third slide.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/carrosel4.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Quarto slide representativo</h5>
+              <p>Some representative placeholder content for the forth slide.</p>
             </div>
           </div>
         </div>
@@ -89,15 +89,14 @@
         </button>
     </div>
 
-    <h1 class="tiitulos-bases">Sobre Mim</h1>
-
-    <div class="container">
+    <div class="alinha container">
       <div class="row">
         <div class="col">
-          Column
+          <img src="img/BrunoSnoopy.png" class="img-fluid" alt="...">
         </div>
         <div class="col">
-          Column
+          <h4>Sobre Mim</h4>
+          Sou uma pessoa inteligente e calma, com olhar atento aos detalhes e dedicação em cada tarefa. Tenho facilidade em assumir responsabilidades, atuando com capricho e esforço para alcançar resultados consistentes. Possuo boas habilidades de liderança, mas também trabalho muito bem em equipe, sempre buscando equilíbrio, organização e qualidade em tudo o que faço.
         </div>
       </div>
     </div>
