--- a/bootstrap-5.3.8-dist/index.html
+++ b/bootstrap-5.3.8-dist/index.html
@@ -5,34 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Bootstrap demo</title>
+    <link rel="shortcut icon" href="img/LogoCurriculo.png" type="image/x-icon">
+    <title>Currìculo Bootstrap</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg banner">
         <div class="container-fluid">
           <img src="img/LogoCurriculo.png" alt="" class="LogoCurriculo">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
+              <li class="nav-item banner-palavras">
                 <a class="nav-link active" aria-current="page" href="#sobre">Sobre Mim</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#projetos">Principais Projetos</a>
+              <li class="nav-item banner-palavras">
+                <a class="nav-link active" href="#projetos"></a>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown banner-palavras">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  Principais Projetos
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Feira de Ciências</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">Apresentação Teatral</a></li>
+                  
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
+              
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
