--- a/bootstrap-5.3.8-dist/index.html
+++ b/bootstrap-5.3.8-dist/index.html
@@ -7,27 +7,33 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/LogoCurriculo.png" type="image/x-icon">
     <title>Currìculo Bootstrap</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,431;1,431&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg banner">
         <div class="container-fluid">
-          <img src="img/LogoCurriculo.png" alt="" class="LogoCurriculo">
+          <img src="img/LogoSnoopy.png" alt="" class="LogoCurriculo">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item banner-palavras">
-                <a class="nav-link active" aria-current="page" href="#sobre">Sobre Mim</a>
+                <a class="nav-link active banner-palavras titulos" aria-current="page" href="#sobre">Sobre Mim</a>
               </li>
-              <li class="nav-item banner-palavras">
-                <a class="nav-link active" href="#projetos"></a>
+              <li class="nav-item banner-palavras titulos">
+                <a class="nav-link active" href="#"></a>
               </li>
-              <li class="nav-item dropdown banner-palavras">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <li class="nav-item dropdown banner-palavras titulos">
+                <a class="nav-link dropdown-toggle" href="#projetos" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Principais Projetos
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Feira de Ciências</a></li>
+                  <li><a class="dropdown-item" href="#feira">Feira de Ciências</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Apresentação Teatral</a></li>
+                  <li><a class="dropdown-item" href="#teatro">Apresentação Teatral</a></li>
                   
                 </ul>
               </li>
@@ -91,12 +97,12 @@
     <div class="alinha container">
       <div class="row">
         <div class="col">
-          <img src="img/BrunoSnoopy.png" class="img-fluid" alt="...">
+          <img src="img/BrunoSnoopy2.jpg" class="img-fluid" alt="...">
         </div>
         <div class="col">
-          <h4>Sobre Mim</h4>
-          Sou uma pessoa inteligente e calma, com olhar atento aos detalhes e dedicação em cada tarefa. Tenho facilidade em assumir responsabilidades, atuando com capricho e esforço para alcançar resultados consistentes. Possuo boas habilidades de liderança, mas também trabalho muito bem em equipe, sempre buscando equilíbrio, organização e qualidade em tudo o que faço.
-        </div>
+          <h4 class="titulos">Sobre Mim</h4>
+          <p class="textos">Sou uma pessoa inteligente e calma, com olhar atento aos detalhes e dedicação em cada tarefa. Tenho facilidade em assumir responsabilidades, atuando com capricho e esforço para alcançar resultados consistentes. Possuo boas habilidades de liderança, mas também trabalho muito bem em equipe, sempre buscando equilíbrio, organização e qualidade em tudo o que faço.</p>
+          
       </div>
     </div>
 
