--- a/bootstrap-5.3.8-dist/index.html
+++ b/bootstrap-5.3.8-dist/index.html
@@ -170,7 +170,45 @@
     </div>
 
     <section id="hobbies">
+      <div class="container">
+        <h2 class="titulos">Meus Hobbies</h2>
+        <div class="row">
+          <div class="col">
+            <div class="img-alinha">
+              <img src="img/BolaVolei.png" class="img-fluid img-hobbies" alt="...">
+              <button type="button" class="btn btn-primary textos" data-bs-toggle="modal" data-bs-target="#Modal1">
+                Launch demo modal
+              </button>
+            </div>
+          </div>
+          <div class="col">
+            <div class="img-alinha">
+              <img src="img/Controle.png" class="img-fluid img-hobbies" alt="...">
+              
+            </div>
+          </div>
+          <div class="col">
+            <div class="img-alinha">
+              <img src="img/Lapis.png" class="img-fluid img-hobbies" alt="...">
+            </div>
+          </div>
+        </div>
 
+        <div class="row">
+          <div class="col">
+            <div class="img-alinha">
+
+              <img src="img/Camera.png" class="img-fluid img-hobbies" alt="...">
+            </div>
+          </div>
+          <div class="col">
+            <div class="img-alinha">
+
+              <img src="img/Peso.png" class="img-fluid img-hobbies" alt="...">
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <div class="divisoes">
@@ -290,6 +328,24 @@
     <footer>
       <h5 class="textos">Desenvolvido por <span class="destaque">Bruno Ferreira dos Santos</span></h2>
     </footer>
+    <!-- Modal -->
+    <div class="modal fade" id="Modal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="js/bootstrap.bundle.js"></script>
   </body>
