--- a/bootstrap-5.3.8-dist/index.html
+++ b/bootstrap-5.3.8-dist/index.html
@@ -106,7 +106,7 @@
 
     <section id="sobre">
 
-      <div class="alinha container">
+      <div class="alinha container responsividade">
         <div class="row">
           <div class="col">
             <img src="img/BrunoSnoopy2.jpg" class="img-fluid" alt="...">
@@ -177,19 +177,24 @@
             <div class="img-alinha">
               <img src="img/BolaVolei.png" class="img-fluid img-hobbies" alt="...">
               <button type="button" class="btn btn-primary textos" data-bs-toggle="modal" data-bs-target="#Modal1">
-                Launch demo modal
+                Aprofunde!
               </button>
             </div>
           </div>
           <div class="col">
             <div class="img-alinha">
               <img src="img/Controle.png" class="img-fluid img-hobbies" alt="...">
-              
+              <button type="button" class="btn btn-primary textos" data-bs-toggle="modal" data-bs-target="#Modal2">
+                Aprofunde!
+              </button>
             </div>
           </div>
           <div class="col">
             <div class="img-alinha">
               <img src="img/Lapis.png" class="img-fluid img-hobbies" alt="...">
+              <button type="button" class="btn btn-primary textos" data-bs-toggle="modal" data-bs-target="#Modal3">
+                Aprofunde!
+              </button>
             </div>
           </div>
         </div>
@@ -197,14 +202,18 @@
         <div class="row">
           <div class="col">
             <div class="img-alinha">
-
               <img src="img/Camera.png" class="img-fluid img-hobbies" alt="...">
+              <button type="button" class="btn btn-primary textos" data-bs-toggle="modal" data-bs-target="#Modal4">
+                Aprofunde!
+              </button>
             </div>
           </div>
           <div class="col">
             <div class="img-alinha">
-
               <img src="img/Peso.png" class="img-fluid img-hobbies" alt="...">
+              <button type="button" class="btn btn-primary textos" data-bs-toggle="modal" data-bs-target="#Modal5">
+                Aprofunde!
+              </button>
             </div>
           </div>
         </div>
@@ -333,11 +342,83 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <h5 class="modal-title titulos" id="exampleModalLabel">Vôlei</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            ...
+            <img src="img/modal-volei.jpg" class="img-fluid" alt="...">
+            <p class="textos">Minha maior paixão é o esporte.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="Modal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title titulos" id="exampleModalLabel">Jogos</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <img src="img/modal-rocket.png" class="img-fluid" alt="...">
+            <p class="textos">Meu passa-tempo.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="Modal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title titulos" id="exampleModalLabel">Desenho</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <img src="img/modal-desenho.jpg" class="img-fluid" alt="...">
+            <p class="textos">Uma de minhas aptidões.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="Modal4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Fotos</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p class="textos">Um verdadeiro amante do céu.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="Modal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Academia</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <img src="img/modal-academia.png" class="img-fluid" alt="...">
+            <p class="textos">Uma tentatia de me tornar alguém melhor.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
