--- a/bootstrap-5.3.8-dist/index.html
+++ b/bootstrap-5.3.8-dist/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/LogoCurriculo.png" type="image/x-icon">
-    <title>Currìculo Bootstrap</title>
+    <title>Currículo Bootstrap</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
